--- a/src/webapp/WEB-INF/pages/usersAll.html
+++ b/src/webapp/WEB-INF/pages/usersAll.html
@@ -23,8 +23,8 @@
     </div>
 </table>
 <br/>
-<form method="POST" action="/new" object="user">
-    <label for="name">Новое имя:</label>
+<form th:method="POST" th:action="@{/new}" th:object="${user}">
+    <label th:for="name">Новое имя:</label>
     <input type="text" name="name" id="name">
     <br/>
     <label for="age">Возраст:</label>
